2010-01-04  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        Make all commands AbstractDeclarativeCommmands instead of direct Command subclasses
        https://bugs.webkit.org/show_bug.cgi?id=33131

        Evenetually we'll probably roll AbstractDeclarativeCommmand directly into Command
        but for now we just deploy it everywhere and don't try to fix up the few valid uses
        of Command.

        * Scripts/webkitpy/commands/download.py:
        * Scripts/webkitpy/commands/queries.py:
        * Scripts/webkitpy/commands/upload.py:
        * Scripts/webkitpy/multicommandtool.py:

2010-01-03  Adam Barth  <abarth@webkit.org>

        Unreviewed "build" fix.  Need to import ScriptError.

        * Scripts/webkitpy/buildsteps.py:

2010-01-03  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        [bzt] Make it easier to run submit-patch when previous run cancelled
        https://bugs.webkit.org/show_bug.cgi?id=33070

        This patch renames create-review to submit-patch (as requested by
        Maciej).

        This patch makes it easier to run submit-patch after the user has
        already cancelled a previous run of submit-patch by detecting when we
        already have ChangeLogs and reading the bug number from them (and not
        attempting to recreate them).  Aside from performance and the extra
        edit step, this command should not subsume post-dif.

        Also, added a --email command line argument so that the output of
        prepare-ChangeLog makes sense when it can't find the user's email
        address.

        * Scripts/webkitpy/bugzilla.py:
        * Scripts/webkitpy/buildsteps.py:
        * Scripts/webkitpy/commands/upload.py:
        * Scripts/webkitpy/commands/upload_unittest.py:
        * Scripts/webkitpy/mock_bugzillatool.py:
        * Scripts/webkitpy/user.py:

2010-01-03  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.
