@@ -1,3 +1,15 @@
+2010-01-04  Daniel Bates  <dbates@webkit.org>
+
+        Reviewed by Eric Seidel.
+
+        https://bugs.webkit.org/show_bug.cgi?id=33039
+
+        [bzt] Second attempt to fix an issue where bugzilla-tool dies
+        when the keychain lookup fails to find an entry for bugs.webkit.org.
+
+        * Scripts/webkitpy/credentials.py:
+        * Scripts/webkitpy/credentials_unittest.py:
+
 2010-01-04  Eric Seidel  <eric@webkit.org>
 
         Reviewed by Adam Barth.
